# VideoFusion

./: CMakeLists.txt  README.md
cmake/: FindFFMPEG.cmake
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mmobject.cpp  mmobject.h
